testsuite/tests/interpreter_errors/selector_unpack_wrong/test.out
script.lkql:2:18: error: Type error: expected indexable but got Node
2 |     | AdaNode => rec *this.parent
  |                  ^^^^^^^^^^^^^^^^

